@@ -1,7 +1,7 @@
 #  File src/library/base/R/serialize.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2018 The R Core Team
+#  Copyright (C) 1995-2019 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -53,6 +53,17 @@ readRDS <- function(file, refhook = NULL)
 	con <- if(inherits(file, "url")) gzcon(file) else file
     else stop("bad 'file' argument")
     .Internal(unserializeFromConn(con, refhook))
+}
+
+infoRDS <- function(file)
+{
+    if(is.character(file)) {
+        con <- gzfile(file, "rb")
+        on.exit(close(con))
+    } else if (inherits(file, "connection"))
+        con <- if(inherits(file, "url")) gzcon(file) else file
+    else stop("bad 'file' argument")
+    .Internal(serializeInfoFromConn(con))
 }
 
 serialize <-
